<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BlitzCalc</string>
    <string name="action_settings">Settings</string>
    
    <string name="multiply_operator">×</string>
    <string name="divide_operator">÷</string>
    <string name="empty_text">0</string>
    
    <string name="button_challenge">Race Mode</string>
    <string name="button_practice">Practice Mode</string>
    <string name="button_help">Help</string>
    <string name="button_about">About</string>
    
    <string name="title_activity_main">BlitzCalc</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_game_over">Game Over</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_apache">Apache License 2.0</string>
    
    <string name="goal_base_text">"="</string>
    <string name="goal_prompt_text">"Goal: "</string>
    <string name="backspace_text">←</string>
    <string name="score_base_string">"Your Time is: "</string>
    <string name="current_global_record">"Global Record: "</string>
    <string name="congratulations">Congrats</string>
    
	<string name="new_game">New Game</string>
    <string name="main_menu">Main Menu</string>
    
    <string name="difficulty">"Practice mode difficulty"</string>
    <string-array name="difficulties">
        <item>Easy (10–100)</item>
        <item>Medium (100–1000)</item>
        <item>Hard (1000–10000)</item>
    </string-array>
    <string-array name="difficulty_values">
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    
    <string name="submit_scores_title">Enable Google Play services and submit scores?</string>
    <string name="show_ready">Count down before each round</string>
    <string name="haptic_feedback">Enable haptic feedback</string>
    <string name="ready_message">"Ready… "</string>
    
    <string name="help_intro">BlitzCalc is a calculator with a twist.</string>
    <string name="help_digits">Each number you enter can only be 1 digit long.</string>
    <string name="help_objective">Get to the goal as fast as possible to set high scores in Race mode or take your time in Practice mode.</string>
    <string name="illegal_string">"10+21"</string>
    <string name="legal_string">"2^5*3+9"</string>
    
    <string name="submit_scores">Automatically submit scores</string>
    <string name="sign_in_on_startup">Use Google Play services</string>
    <string name="not_available">N/A</string>
    <string name="leaderboards">Leaderboards</string>
    
    <string name="about_text">"BlitzCalc was developed by Nolan Poe.\n\nEvaluation of mathematical expressions courtesy of exp4j, licensed Apache 2.0."</string>
    
    <string name="view_apache">View Apache License 2.0</string>
    
    <string name="disable_ads">Disable Ads</string>
    <string name="keep_screen_on">Keep screen on</string>
    
    <string name="social_prefs">Social</string>
    <string name="game_prefs">Game</string>
    
    <string name="play_services_error">"Couldn't sign in, disabling Google Play services."</string>
    <string name="must_sign_in">"Sign in to view leaderboards."</string>
    
</resources>