<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/social_prefs" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="sign_in"
            android:title="@string/sign_in_on_startup" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="sign_in"
            android:key="submit_scores"
            android:title="@string/submit_scores" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/game_prefs" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="keep_screen_on"
            android:title="@string/keep_screen_on" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_ready"
            android:title="@string/show_ready" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="haptic"
            android:title="@string/haptic_feedback" />
        
        <ListPreference
            android:defaultValue="3"
            android:dialogTitle="@string/difficulty"
            android:entries="@array/difficulties"
            android:entryValues="@array/difficulty_values"
            android:key="digits"
            android:title="@string/difficulty" />
    </PreferenceCategory>

</PreferenceScreen>