<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.blitzcalc.MainActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="300dp"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/blitzlogo" />

        <Button
            android:id="@+id/buttonChallenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="onClickChallenge"
            android:text="@string/button_challenge"
            android:textSize="@dimen/main_button_size" />

        <Button
            android:id="@+id/buttonPractice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="onClickPractice"
            android:text="@string/button_practice"
            android:textSize="@dimen/main_button_size" />

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="onClickSettings"
            android:text="@string/action_settings"
            android:textSize="@dimen/main_button_size" />

        <Button
            android:id="@+id/buttonHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="onClickHelp"
            android:text="@string/button_help"
            android:textSize="@dimen/main_button_size" />
    </LinearLayout>

</RelativeLayout>