<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutGameOver"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.blitzcalc.GameOverFragment"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewCongrats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/congratulations"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/result_text_size" />

        <TextView
            android:id="@+id/textViewDisplayScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="blah"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/buttonBackToNewGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp"
            android:text="@string/new_game"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/buttonBackToMainMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_menu"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/buttonGameOverLeaderboards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/leaderboards"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

</RelativeLayout>